Add design responsiveness

--- a/index.html
+++ b/index.html
@@ -19,16 +19,17 @@
             <div class="nav-wrapper-inner">
 
                 <div class="logo-wrapper">
-                    <a href="#" class="logo">Йосиф Петров</a>
+                    <a href="index.html" class="logo">Йосиф Петров</a>
                     <span>(1909 – 2004)</span>
                 </div>
 
-                <!-- <span class="nav-toggler"> </span> -->
+                <div class="nav-toggler-wrapper mobile-only"><span id="nav-toggler"></span></div>
+
                 <nav>
                     <ul>
-                        <li><a href="#">Творчество</a></li>
+                        <li><a href="sidebar.html">Творчество</a></li>
                         <li><a href="#">Галерия</a></li>
-                        <li>
+                        <li class="has-items">
                             <a href="#">Видео</a>
                             <ul>
                                 <li><a href="#">90 години не стигат</a></li>
@@ -82,7 +83,7 @@
     </main>
 
     <footer>
-        Copyright &copy; 2016-2021 Йосиф Петров. Всички права запазени.
+        Copyright &copy; 2016-2021 Йосиф Петров.<br /> Всички права запазени.
     </footer>
 
 
